trying to source bashrc to get acess to bun

--- a/.github/workflows/deploy-pi-software.yml
+++ b/.github/workflows/deploy-pi-software.yml
@@ -12,6 +12,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
+
+    - name: Source bash
+      run: source ~/.bashrc
     
     - name: Activate Python
       run: 
