--- a/.github/workflows/deploy-pi-software.yml
+++ b/.github/workflows/deploy-pi-software.yml
@@ -24,7 +24,7 @@ jobs:
       run: /home/pi/sofia-plotter/bin/pip install -r python/requirements.txt
 
     - name: Build Frontend
-      run: cd web-apps/svg-dropper/frontend && bun i && npm run build
+      run: cd web-apps/svg-dropper/frontend && /home/pi/.bun/bin/bun i && npm run build
 
       
 
