--- a/.github/workflows/deploy-pi-software.yml
+++ b/.github/workflows/deploy-pi-software.yml
@@ -25,11 +25,17 @@ jobs:
 
     - name: Build Frontend
       run: cd web-apps/svg-dropper/frontend && /home/pi/.bun/bin/bun i && npm run build
-
-    - name: Serve dist folder
+      
+    - name: Serve dist folder and check
       run: |
         cd web-apps/svg-dropper/frontend/dist
-        python -m http.server 8081
-
+        python -m http.server 8081 &
+        sleep 5
+        if curl -s http://localhost:8081 > /dev/null; then
+          echo "Frontend server is running"
+        else
+          echo "Frontend server failed to start"
+          exit 1
+        fi
 
     
