--- a/.github/workflows/deploy-pi-software.yml
+++ b/.github/workflows/deploy-pi-software.yml
@@ -13,26 +13,27 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Stop frontend and backend services
+      run: |
+        sudo systemctl stop serve-svg-dropper-frontend.service
+        sudo systemctl stop serve-svg-dropper-backend.service
+
     - name: Source bash
       run: source ~/.bashrc
     
-    - name: Activate Python and kill old 
+    - name: Activate Python
       run: |
         source /home/pi/sofia-plotter/bin/activate
         
     - name: Install reqs
       run: /home/pi/sofia-plotter/bin/pip install -r python/requirements.txt
 
-    - name: Stop serving svg-dropper frontend
-      run: sudo systemctl stop serve-svg-dropper-frontend.service
-
     - name: Build Frontend
       run: cd web-apps/svg-dropper/frontend && /home/pi/.bun/bin/bun i && npm run build
       
-    - name: Stop serving svg-dropper frontend
+    - name: Start backend and frontend services
       run: |
+        sudo systemctl start serve-svg-dropper-backend.service
         sudo systemctl start serve-svg-dropper-frontend.service
+        sudo systemctl status serve-svg-dropper-backend.service
         sudo systemctl status serve-svg-dropper-frontend.service
-
-
-    
