--- a/web-apps/svg-dropper/frontend/package.json
+++ b/web-apps/svg-dropper/frontend/package.json
@@ -13,8 +13,11 @@
     "@mantine/core": "^7.12.0",
     "@mantine/dropzone": "^7.12.0",
     "@mantine/hooks": "^7.12.0",
+    "file-saver": "^2.0.5",
+    "plotly.js": "^2.34.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
