--- a/web-apps/svg-dropper/backend/plot.toml
+++ b/web-apps/svg-dropper/backend/plot.toml
@@ -10,5 +10,5 @@ line_start = "\n\t\t\"line{index:}\": [\n"
 line_end = "\n\t\t]"
 segment = "\t\t{{\n\t\t\t\"X\": {x:.2f},\n\t\t\t\"Y\": {y:.2f}\n\t\t}},\n"
 segment_last = "\t\t{{\n\t\t\t\"X\": {x:.2f},\n\t\t\t\"Y\": {y:.2f}\n\t\t}}"
-unit = "mm"
+unit = "px"
 invert_y = true
