--- a/web-apps/svg-dropper/frontend/package.json
+++ b/web-apps/svg-dropper/frontend/package.json
@@ -13,7 +13,9 @@
     "@mantine/core": "^7.12.0",
     "@mantine/dropzone": "^7.12.0",
     "@mantine/hooks": "^7.12.0",
+    "@tabler/icons-react": "^3.11.0",
     "file-saver": "^2.0.5",
+    "http-server": "^14.1.1",
     "plotly.js": "^2.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
