--- a/web-apps/svg-dropper/frontend/package.json
+++ b/web-apps/svg-dropper/frontend/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.12.0",
+    "@mantine/core": "latest",
     "@mantine/dropzone": "^7.12.0",
     "@mantine/hooks": "^7.12.0",
     "@tabler/icons-react": "^3.11.0",
