test list style

--- a/.github/workflows/deploy-mini-plotter.yml
+++ b/.github/workflows/deploy-mini-plotter.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   run-script:
-    runs-on: self-hosted, mini
+    runs-on: [self-hosted, mini]
     
     steps:
     - uses: actions/checkout@v3
