--- a/.github/workflows/deploy-pi-software.yml
+++ b/.github/workflows/deploy-pi-software.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   run-script:
-    runs-on: self-hosted
+    runs-on: [self-hosted, large-plotter]
     
     steps:
     - uses: actions/checkout@v3
