--- a/web-apps/svg-dropper/backend/pyproject.toml
+++ b/web-apps/svg-dropper/backend/pyproject.toml
@@ -13,5 +13,5 @@ dependencies = [
     "requests>=2.32.4",
     "svgpathtools>=1.7.1",
     "uvicorn>=0.35.0",
-    "vpype-gcode>=0.13.0",
+    "vpype>=1.15.0",
 ]
