--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react": "^19",
     "react-dom": "^19",
     "react-dropzone": "^14.3.8",
+    "react-number-format": "^5.4.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7"
