--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "debugpy>=1.8.16",
     "fastapi>=0.116.1",
     "lxml>=6.0.0",
     "numpy>=2.3.2",
