got it running and added sorting

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         
 
         {
-            "name": "Backend (Launch)",
+            "name": "Backend",
             "type": "debugpy",
             "request": "launch",
             "program": "main.py",
