--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         DOCKER_BUILDKIT: 1
     ports:
       - "8090:8090"
+    restart: unless-stopped
 
 
   frontend:
@@ -20,6 +21,7 @@ services:
       - "8091:8091"
     depends_on:
       - backend
+    restart: unless-stopped
 
 
 
