fixed svg parsing!!!! multi layers get flattened

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,7 +45,10 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/.venv/bin/python"
+            }
         }
     ],
     "compounds": [
