--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "debugpy>=1.8.16",
+    "devtools>=0.12.2",
     "fastapi>=0.116.1",
     "lxml>=6.0.0",
     "matplotlib>=3.10.5",
@@ -13,5 +14,6 @@ dependencies = [
     "requests>=2.32.4",
     "svgpathtools>=1.7.1",
     "uvicorn>=0.35.0",
+    "vpype-gcode>=0.13.0",
     "vpype>=1.15.0",
 ]
