opening docker network for backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,12 @@ services:
     ports:
       - "8090:8090"
     restart: unless-stopped
+    # Allow DNS resolution and network connectivity
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 
   frontend:
